# router/app.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	_ "Gin_Gorm_OJ/docs"
+	"Gin_Gorm_OJ/middlewares"
 	"Gin_Gorm_OJ/service"
 
 	"github.com/gin-gonic/gin"
@@ -16,6 +17,8 @@ func InitRouter() *gin.Engine {
 	r := gin.Default()
 	//swagger路由
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	//公有方法
 	//问题路由
 	r.GET("/ping", service.Ping)
 	r.GET("/problem-list", service.GetProblemList)
@@ -30,5 +33,10 @@ func InitRouter() *gin.Engine {
 
 	//提交记录
 	r.GET("/submit-list", service.GetSubmitList)
+
+	//私有方法
+	//管理员私有方法:创建问题
+	r.POST("/problem-create", middlewares.AuthAdminCheck, service.CreateProblem) //创建问题，中间件检查用户是否是管理员
+
 	return r
 }
